Added SqlUserRepository and some data validation

--- a/UsersApi/appsettings.json
+++ b/UsersApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "UsersConnection": "server=127.0.0.1;uid=userAPI;pwd=userAPI;database=One"
+  },
   "AllowedHosts": "*"
 }
