--- a/UsersApi/UsersApi.csproj
+++ b/UsersApi/UsersApi.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MySqlConnector" Version="2.4.0" />
     <ProjectReference Include="..\FrameworkExtensions\FrameworkExtensions.csproj" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
